# tudatCore-svn-mirror

./: CMakeLists.txt  Doxyfile.in  NOTICE  README  UserSettings.txt.example
Astrodynamics/: CMakeLists.txt  astrodynamicsFunctions.cpp  astrodynamicsFunctions.h  physicalConstants.h  unitTestAstrodynamicsFunctions.cpp  unitTestPhysicalConstants.cpp
Astrodynamics/unitTests/: unitTestAstrodynamicsFunctions.cpp  unitTestPhysicalConstants.cpp
InputOutput/: CMakeLists.txt  dummySourceFile.cpp  unitTestBasicInputOutput.cpp
InputOutput/UnitTests/: unitTestStreamFilters.cpp
Mathematics/: CMakeLists.txt  basicMathematicsFunctions.cpp  basicMathematicsFunctions.h  coordinateConversions.cpp  coordinateConversions.h  linearAlgebra.cpp  linearAlgebra.h  unitTestBasicMathematicsFunctions.cpp  unitTestCoordinateConversions.cpp  unitTestLinearAlgebra.cpp
Mathematics/UnitTests/: unitTestBasicMathematicsFunctions.cpp  unitTestCoordinateConversions.cpp  unitTestLinearAlgebra.cpp
Tudat/Core/: CMakeLists.txt
Tudat/Core/Astrodynamics/: CMakeLists.txt
Tudat/Core/Astrodynamics/unitTests/: unitTestAstrodynamicsFunctions.cpp
Tudat/Core/InputOutput/: streamFilters.cpp
Tudat/Core/Mathematics/: coordinateConversions.cpp
TudatCore/: CMakeLists.txt  UserSettings.txt.example  mainDoxygenPage.h  mainPage.h  namespaceDescriptions.h  tudatCoreContacts.txt  tudatCoreVersion.h
TudatCore/Astrodynamics/: CMakeLists.txt  astrodynamicsFunctions.cpp  astrodynamicsFunctions.h  orbitalElementConversions.cpp  orbitalElementConversions.h  physicalConstants.h  unitConversions.h
TudatCore/Astrodynamics/BasicAstrodynamics/: CMakeLists.txt  astrodynamicsFunctions.cpp  astrodynamicsFunctions.h  orbitalElementConversions.cpp  orbitalElementConversions.h  physicalConstants.h  unitConversions.h
TudatCore/Astrodynamics/BasicAstrodynamics/UnitTests/: unitTestAstrodynamicsFunctions.cpp  unitTestBasicAstrodynamics.cpp  unitTestOrbitalElementConversions.cpp  unitTestPhysicalConstants.cpp  unitTestUnitConversions.cpp
TudatCore/Astrodynamics/UnitTests/: unitTestAstrodynamicsFunctions.cpp  unitTestOrbitalElementConversions.cpp  unitTestPhysicalConstants.cpp  unitTestUnitConversions.cpp
TudatCore/Basics/: CMakeLists.txt  dummySourceFile.cpp  testMacros.h  utilityMacros.h
TudatCore/Basics/UnitTests/: unitTestBasics.cpp  unitTestTestMacros.cpp  unitTestTestMacros.newBoost.pattern  unitTestTestMacros.oldBoost.pattern  unitTestTestMacros.pattern  unitTest_testMacros.cpp  unitTest_testMacros.match.pattern  unitTest_testMacros.newBoost.pattern  unitTest_testMacros.oldBoost.pattern
TudatCore/InputOutput/: CMakeLists.txt  basicInputOutput.h  dummySourceFile.cpp  matrixTextFileReader.cpp  matrixTextFileReader.h  streamFilters.cpp  streamFilters.h
TudatCore/InputOutput/UnitTests/: unitTestBasicInputOutput.cpp  unitTestInputOutput.cpp  unitTestMatrixTextFileReader.cpp  unitTestStreamFilters.cpp
TudatCore/Mathematics/: CMakeLists.txt  basicMathematicsFunctions.cpp  basicMathematicsFunctions.h  coordinateConversions.cpp  coordinateConversions.h  linearAlgebra.cpp  linearAlgebra.h  mathematicalConstants.h
TudatCore/Mathematics/BasicMathematics/: CMakeLists.txt  basicMathematicsFunctions.cpp  basicMathematicsFunctions.h  coordinateConversions.cpp  coordinateConversions.h  linearAlgebra.cpp  linearAlgebra.h  mathematicalConstants.h
TudatCore/Mathematics/BasicMathematics/UnitTests/: unitTestBasicMathematics.cpp  unitTestBasicMathematicsFunctions.cpp  unitTestCoordinateConversions.cpp  unitTestLinearAlgebra.cpp  unitTestMathematicalConstants.cpp
TudatCore/Mathematics/NumericalIntegrators/: CMakeLists.txt  euler.h  numericalIntegrator.cpp  numericalIntegrator.h  reinitializableNumericalIntegrator.h  rungeKutta4Integrator.h
TudatCore/Mathematics/NumericalIntegrators/UnitTests/: benchmarkFunctions.h  matlabOutputEulerBackwards.txt  matlabOutputEulerDiscreteEvent.txt  matlabOutputEulerForwards.txt  matlabOutputRungeKutta4Backwards.txt  matlabOutputRungeKutta4DiscreteEvent.txt  matlabOutputRungeKutta4Forwards.txt  numericalIntegratorTestFunctions.h  numericalIntegratorTests.cpp  numericalIntegratorTests.h  unitTestEulerIntegrator.cpp  unitTestNumericalIntegrator.cpp  unitTestNumericalIntegrators.cpp  unitTestRungeKutta4Integrator.cpp
TudatCore/Mathematics/UnitTests/: unitTestBasicMathematicsFunctions.cpp  unitTestCoordinateConversions.cpp  unitTestLinearAlgebra.cpp  unitTestMathematicalConstants.cpp
